# ruggrogue

./: .gitignore  BUILD.md  Cargo.toml  LICENSE.txt  README.md  book.toml  clippy.toml  index.html  ruggle.js  ruggrogue.js
.cargo/: config.toml
assets/urizen/: readme.txt
book/: SUMMARY.md  auto-run.md  dependencies.md  entity-component-system.md  event-handling.md  experience-and-difficulty.md  field-of-view.md  game-data.md  hunger-and-regeneration.md  index.md  input-handling.md  introduction.md  items.md  map-generation.md  map-population.md  monsters.md  new-game-plus.md  options.md  outlink.css  overall-game-flow.md  pathfinding.md  randomness.md  rendering.md  saving-and-loading.md  source-code-layout.md  todo.md  turn-order-and-combat.md  user-interface.md  word-wrapping.md
play/: index.html  ruggrogue.js  ruggrogue.wasm
source-code-guide/: 404.html  auto-run.html  dependencies.html  entity-component-system.html  event-handling.html  experience-and-difficulty.html  field-of-view.html  game-data.html  hunger-and-regeneration.html  index.html  items.html  map-generation.html  map-population.html  monsters.html  new-game-plus.html  options.html  overall-game-flow.html  pathfinding.html  print.html  randomness.html  rendering.html  saving-and-loading.html  searchindex.js  searchindex.json  source-code-layout.html  turn-order-and-combat.html  user-interface.html  word-wrapping.html
src/: app.rs  bitgrid.rs  chargrid.rs  chunked.rs  components.rs  damage.rs  experience.rs  field_of_view.rs  gamekey.rs  gamesym.rs  hunger.rs  input_buffer.rs  item.rs  lib.rs  magicnum.rs  main.rs  map.rs  menu_memory.rs  message.rs  monster.rs  player.rs  rect.rs  render.rs  run.rs  saveload.rs  spawn.rs  ui.rs  vision.rs
src/lib/: a_star.rs  chargrid.rs  field_of_view.rs  input_buffer.rs  lib.rs  path_find.rs  run.rs  tilegrid.rs  util.rs  word_wrap.rs
src/modes/: app_quit_dialog.rs  dungeon.rs  equipment_action.rs  equipment_shortcut.rs  game_over.rs  inventory.rs  (+10 more)
