[package]
name = "ruggle"
version = "0.1.0"
authors = ["Tung Nguyen <tungtn3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Benchmark and print updates/frames per second to standard error.
fps = []

[dependencies]
bitflags = "1.0"
bitvec = "0.19"
rand = "0.7"
rand_pcg = "0.2"
shipyard = "0.4"

# We don't use this, but bitvec 0.19 breaks on funty 1.2, so we need to specify this.
[dependencies.funty]
version = ">=1.0, <=1.1"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image"]

[lib]
path = "src/lib/lib.rs"
